<resources>
    <string name="app_name">SocialMediaSmall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_account_sign_up">Create Account, Sign Up</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="default_web_client_id">602984123441-kqffvmaailpqvkrs29con2b3vtn87ufq.apps.googleusercontent.com</string>
    <string name="forgot_pasword">Forgot Pasword</string>
    <string name="username">Username</string>
    <string name="_2h">2h</string>
    <string name="_100_likes">100 Likes</string>
    <string name="love_to_travel_around_the_world">Love to travel around the world</string>
    <string name="_250">250</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="add_something_about_this_post">Add Something About This Post</string>
    <string name="description">Description</string>
    <string name="sign_in">SIGN IN</string>
    <string name="search_here">Search here...</string>
    <string name="status">Status</string>
    <string name="unfollow">UnFollow</string>
    <string name="view_all_comment">View all comment</string>
</resources>