<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_person"
        app:civ_border_color="#434343"
        app:civ_border_width="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/profileImage"
        android:layout_toRightOf="@id/profileImage"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2h"

            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/profileImage"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/likeBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_heart" />

        <ImageButton
            android:id="@+id/commentBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_comment1" />

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/ic_share" />
    </LinearLayout>

    <TextView
        android:id="@+id/descTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/likeCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descTv"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/_100_likes"
        android:textStyle="bold" />


</RelativeLayout>